force-app/main/default/objects/Attendance__c/Attendance__c.object-meta.xml
<CustomObject>
    <label>Attendance</label>
    <nameField>
        <displayFormat>AT No.-{ddmmyy}-{00000}</displayFormat>
        <label>Attendance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>