force-app/main/default/objects/Attendance__c/fields/Assigned_Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Volunteer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Volunteer</label>
    <referenceTo>Assigned_Volunteer__c</referenceTo>
    <relationshipLabel>Attendances</relationshipLabel>
    <relationshipName>Attendances</relationshipName>
    <type>Lookup</type>
</CustomField>