force-app/main/default/objects/Attendance__c/fields/Checked_In__c.field-meta.xml
<CustomField>
    <fullName>Checked_In__c</fullName>
    <label>Checked In</label>
    <type>DateTime</type>
</CustomField>