force-app/main/default/objects/Attendance__c/fields/Checked_IN_OUT_Status__c.field-meta.xml
<CustomField>
    <fullName>Checked_IN_OUT_Status__c</fullName>
    <formula>IF( ISBLANK(Checked_Out__c )&amp;&amp; ISBLANK(Checked_In__c ) , &quot;OUT&quot;, IF(ISBLANK(Checked_Out__c ),&quot;IN&quot;,&quot;OUT&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Checked IN/OUT Status</label>
    <type>Text</type>
</CustomField>