force-app/main/default/objects/Attendance__c/fields/Checked_Out__c.field-meta.xml
<CustomField>
    <fullName>Checked_Out__c</fullName>
    <label>Checked Out</label>
    <type>DateTime</type>
</CustomField>