force-app/main/default/objects/Attendance__c/fields/Do_not_send_Email__c.field-meta.xml
<CustomField>
    <fullName>Do_not_send_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not send Email</label>
    <type>Checkbox</type>
</CustomField>