force-app/main/default/objects/Attendance__c/fields/General_Remarks__c.field-meta.xml
<CustomField>
    <fullName>General_Remarks__c</fullName>
    <label>General Remarks</label>
    <length>100</length>
    <type>Text</type>
</CustomField>