force-app/main/default/objects/Attendance__c/fields/out__c.field-meta.xml
<CustomField>
    <fullName>out__c</fullName>
    <formula>IF(ISBLANK(Volunteer_Request__r.End_Time__c) = false,
DATETIMEVALUE(TEXT(YEAR(DATEVALUE(Checked_In__c)))
&amp;&quot;-&quot;
&amp;TEXT(MONTH(DATEVALUE(Checked_In__c)))
&amp;&quot;-&quot;
&amp;TEXT(DAY(DATEVALUE(Checked_In__c)))
&amp;&quot; &quot;
&amp;LEFT(TEXT(Volunteer_Request__r.End_Time__c-28800000),2)
&amp;&quot;:&quot;
&amp;MID(TEXT(Volunteer_Request__r.End_Time__c),4,2)
&amp;&quot;:00&quot;),Checked_In__c+8/24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>out</label>
    <type>DateTime</type>
</CustomField>