force-app/main/default/objects/Attendance__c/fields/Time_Given__c.field-meta.xml
<CustomField>
    <fullName>Time_Given__c</fullName>
    <formula>IF(ISBLANK(Checked_Out__c),NULL,((Checked_Out__c - Checked_In__c)*24))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Given</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>