force-app/main/default/objects/Attendance__c/fields/Volunteer_Request__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Volunteer Request</label>
    <referenceTo>Volunteer_Request__c</referenceTo>
    <relationshipLabel>Attendances</relationshipLabel>
    <relationshipName>Attendances</relationshipName>
    <type>Lookup</type>
</CustomField>